--- a/titlepage.tex
+++ b/titlepage.tex
@@ -16,20 +16,20 @@
 %	\vspace{2.5cm}
 	\vfill
 	
-	{\Large Firstname Lastname}
+	{\Large Zoltán Ságodi}
 	
 	\vspace{0.25cm}
 	
-	{\Large Supervisor: Firstname Lastname, PhD}
+	{\Large Supervisors: \\István Siket, PhD\\Ferenc Rudolf, PhD}
 	
 %	\vspace{2cm}
 	\vfill
 	
-	{\large Doctoral School of DSCHOOL}
+	{\large Doctoral School of Informatics}
 	
 	\vspace{0.25cm}
 	
-	{\large Department of DEPART}
+	{\large Department of Software Engineering}
 	
 	\vspace{0.25cm}
 	
@@ -48,7 +48,7 @@
 	
 	{\large Szeged
 		
-		 DATE}
+		 \today}
 	
 \end{center}
  
