Some work on the intro. Thesis point intros

--- a/refs.bib
+++ b/refs.bib
@@ -1,4 +1,49 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% NSF-SSE proposal publications %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%% THESIS POINT PAPERS %%%%%%%%%%%%%%%%%%%%%%
+
+@ARTICLE{thesispoint_1,
+	author={Ságodi, Zoltán and Siket, István and Ferenc, Rudolf},
+	journal={IEEE Access}, 
+	title={Methodology for Code Synthesis Evaluation of LLMs Presented by a Case Study of ChatGPT and Copilot}, 
+	year={2024},
+	volume={12},
+	number={},
+	pages={72303-72316},
+	keywords={Codes;Source coding;Chatbots;Task analysis;Static analysis;C++ languages;Analytical models;Artificial intelligence;Large language models;Artificial intelligence;copilot;ChatGPT;code-synthesis;code quality;large language models;model selection},
+	doi={10.1109/ACCESS.2024.3403858}
+}
+
+@inproceedings{thesispoint_2,
+	author = {S\'{a}godi, Zolt\'{a}n and Antal, G\'{a}bor and Bogenf\"{u}rst, Bence and Isztin, Martin and Hegedundefineds, P\'{e}ter and Ferenc, Rudolf},
+	title = {Reality Check: Assessing GPT-4 in Fixing Real-World Software Vulnerabilities},
+	year = {2024},
+	isbn = {9798400717017},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3661167.3661207},
+	doi = {10.1145/3661167.3661207},
+	abstract = {Discovering and mitigating software vulnerabilities is a challenging task. These vulnerabilities are often caused by simple, otherwise (and in other contexts) harmless code snippets (e.g., unchecked path traversal). Large Language Models (LLMs) promise to revolutionize not just human-machine interactions but various software engineering tasks as well, including the automatic repair of vulnerabilities. However, currently, it is hard to assess the performance, robustness, and reliability of these models as most of their evaluation has been done on small, synthetic examples. In our work, we systematically evaluate the automatic vulnerability fixing capabilities of GPT-4, a popular LLM, using a database of real-world Java vulnerabilities, Vul4J. We expect the model to provide fixes for vulnerable methods, which we evaluate manually and based on unit test results included in the Vul4J database. GPT-4 provided perfect fixes consistently for at least 12 out of the total 46 examined vulnerabilities, which could be applied as is. In an additional 5 cases, the provided textual instructions would help to fix the vulnerabilities in a practical scenario (despite the provided code being incorrect). Our findings, similar to others, also show that prompting has a significant effect.},
+	booktitle = {Proceedings of the 28th International Conference on Evaluation and Assessment in Software Engineering},
+	pages = {252–261},
+	numpages = {10},
+	keywords = {Automated program repair, GPT, Machine learning, Vulnerability fixing},
+	location = {Salerno, Italy},
+	series = {EASE '24}
+}
+
+@ARTICLE{thesispoint_3,
+	author={Ságodi, Zoltán and Kolláth, István and Hegedűs, Péter and Ferenc, Rudolf},
+	journal={IEEE Access}, 
+	title={A Program Synthesis Dataset for LLM Temperature Analysis}, 
+	year={2025},
+	volume={13},
+	number={},
+	pages={184022-184029},
+	keywords={Benchmark testing;Biological system modeling;Software engineering;Computational modeling;Analytical models;Maintenance engineering;Large language models;Training;Prompt engineering;Programming profession;Large language models;evaluation;data},
+	doi={10.1109/ACCESS.2025.3625443}
+}
+
+%%%%%%%%%%%%%%% END OF TEHSIS POINT PAPERS %%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%% COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
 
