Almost all parts started. TODOS added. Needs about 5-6 pages in total: intro, BG, Summary.

--- a/refs.bib
+++ b/refs.bib
@@ -45,6 +45,44 @@
 
 %%%%%%%%%%%%%%% END OF TEHSIS POINT PAPERS %%%%%%%%%%%%%%%%%%%
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%% ADDITIONAL ARTICLES %%%%%%%%%%%%%%%%%
+
+@article{cg1,
+	title={A Preparation Guide for Java Call Graph Comparison: Finding a Match for Your Methods}, volume={24}, url={https://cyber.bibl.u-szeged.hu/index.php/actcybern/article/view/3991}, DOI={10.14232/actacyb.24.1.2019.10}, abstractNote={&amp;lt;p&amp;gt;Call graphs provide basis for numerous interprocedural analysers and tools, therefore it is crucial how precisely they are constructed. Developers need to know the features of a call graph builder before applying it to subsequent algorithms. The characteristics of call graph builders are best understood by comparing the generated call graphs themselves. The comparison can be done by matching the corresponding nodes in each graph and then analysing the found methods and calls.&amp;lt;/p&amp;gt; &amp;lt;p&amp;gt;In this paper, we developed a process for pairing the nodes of multiple call graphs produced for the same source code. As the six static analysers that we collected for call graph building handles Java language elements differently, it was necessary to refine the basic name-wise pairing mechanism in several steps.&amp;amp;nbsp; Two language elements, the anonymous and generic methods, needed extra consideration. We describe the steps of improvement and our final solution to achieve the best possible pairing through the analysis of the Apache Commons-Math project.&amp;lt;/p&amp;gt;}, number={1}, journal={Acta Cybernetica}, author={Pengő, Edit and Ságodi, Zoltán}, year={2019}, month={May}, pages={131–155}
+}
+
+@conference{cg2,
+	author={Judit Jász and István Siket and Edit Pengő and Zoltán Ságodi and Rudolf Ferenc},
+	title={Systematic Comparison of Six Open-source Java Call Graph Construction Tools},
+	booktitle={Proceedings of the 14th International Conference on Software Technologies - ICSOFT},
+	year={2019},
+	pages={117-128},
+	publisher={SciTePress},
+	organization={INSTICC},
+	doi={10.5220/0007929201170128},
+	isbn={978-989-758-379-7},
+	issn={2184-2833},
+}
+
+@ARTICLE{cg3,
+	author={Ságodi, Zoltán and Pengő, Edit and Jász, Judit and Siket, István and Ferenc, Rudolf},
+	journal={IEEE Access}, 
+	title={Static Call Graph Combination to Simulate Dynamic Call Graph Behavior}, 
+	year={2022},
+	volume={10},
+	number={},
+	pages={131829-131840},
+	keywords={Codes;Libraries;Java;Static analysis;Heuristic algorithms;Behavioral sciences;Performance analysis;Call graph;dynamic analysis;java;static analysis},
+	doi={10.1109/ACCESS.2022.3229182}
+}
+
+
+%%%%%%%%%%%%%%%%%%% END OF ADDITIONAL ARTICLES %%%%%%%%%%%%%%%
+
+
+
 %%%%%%%%%%%%%%%%%%% COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
 
 @misc{codex,
@@ -85,6 +123,20 @@
 	location = {Long Beach, California, USA},
 	series = {NIPS'17}
 }
+
+@techreport{vuln_def,
+	author       = {Michael Ogata and Joshua Franklin and Jeffrey Voas and Vincent Sritapan and Stephen Quirolgico},
+	title        = {Vetting the Security of Mobile Applications},
+	institution  = {National Institute of Standards and Technology},
+	type         = {NIST Special Publication 800-163 Revision 1},
+	number       = {SP 800-163r1},
+	year         = {2019},
+	month        = {April},
+	url          = {https://doi.org/10.6028/NIST.SP.800-163r1},
+	note         = {Final publication, supersedes SP 800-163 (January 26, 2015), accessed 2025-12-11},
+}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%% END OF COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
