--- a/refs.bib
+++ b/refs.bib
@@ -137,6 +137,87 @@
 }
 
 
+@article{vuln_det_challenges,
+	author = {Shahriar, Hossain and Zulkernine, Mohammad},
+	title = {Mitigating program security vulnerabilities: Approaches and challenges},
+	year = {2012},
+	issue_date = {June 2012},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {44},
+	number = {3},
+	issn = {0360-0300},
+	url = {https://doi.org/10.1145/2187671.2187673},
+	doi = {10.1145/2187671.2187673},
+	abstract = {Programs are implemented in a variety of languages and contain serious vulnerabilities which might be exploited to cause security breaches. These vulnerabilities have been exploited in real life and caused damages to related stakeholders such as program users. As many security vulnerabilities belong to program code, many techniques have been applied to mitigate these vulnerabilities before program deployment. Unfortunately, there is no comprehensive comparative analysis of different vulnerability mitigation works. As a result, there exists an obscure mapping between the techniques, the addressed vulnerabilities, and the limitations of different approaches. This article attempts to address these issues. The work extensively compares and contrasts the existing program security vulnerability mitigation techniques, namely testing, static analysis, and hybrid analysis. We also discuss three other approaches employed to mitigate the most common program security vulnerabilities: secure programming, program transformation, and patching. The survey provides a comprehensive understanding of the current program security vulnerability mitigation approaches and challenges as well as their key characteristics and limitations. Moreover, our discussion highlights the open issues and future research directions in the area of program security vulnerability mitigation.},
+	journal = {ACM Comput. Surv.},
+	month = jun,
+	articleno = {11},
+	numpages = {46},
+	keywords = {Program security vulnerability mitigation, hybrid analysis, patching, program transformation, secure programming, static analysis, vulnerability testing}
+}
+
+@INPROCEEDINGS{metrics_for_vuln_det,
+  author={Medeiros, Nádia and Ivaki, Naghmeh and Costa, Pedro and Vieira, Marco},
+  booktitle={2017 IEEE 28th International Symposium on Software Reliability Engineering (ISSRE)}, 
+  title={Software Metrics as Indicators of Security Vulnerabilities}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={216-227},
+  keywords={Security;Software metrics;Correlation;Complexity theory;Software systems;Security Vulnerabilities;Software Metrics;Correlation;Feature Selection},
+  doi={10.1109/ISSRE.2017.11}
+}
+
+@article{ml_vuln_det,
+  title={Vulnerable code detection using software metrics and machine learning},
+  author={Medeiros, Nadia and Ivaki, Naghmeh and Costa, Pedro and Vieira, Marco},
+  journal={IEEE Access},
+  volume={8},
+  pages={219174--219198},
+  year={2020},
+  publisher={IEEE}
+}
+
+@ARTICLE{mv_vuln_det_2,
+  author={Zagane, Mohammed and Abdi, Mustapha Kamel and Alenezi, Mamdouh},
+  journal={IEEE Access}, 
+  title={Deep Learning for Software Vulnerabilities Detection Using Code Metrics}, 
+  year={2020},
+  volume={8},
+  number={},
+  pages={74562-74570},
+  keywords={Deep learning;Software;Software metrics;Feature extraction;Neurons;Automatic vulnerability prediction;code metrics;deep neural networks},
+  doi={10.1109/ACCESS.2020.2988557}
+}
+
+
+@Article{implement_security_check_visibility,
+	AUTHOR = {Alqaradaghi, Midya and Nazir, Muhammad Zafar Iqbal and Kozsik, Tamás},
+	TITLE = {Design and Implement an Accurate Automated Static Analysis Checker to Detect Insecure Use of SecurityManager},
+	JOURNAL = {Computers},
+	VOLUME = {12},
+	YEAR = {2023},
+	NUMBER = {12},
+	ARTICLE-NUMBER = {247},
+	URL = {https://www.mdpi.com/2073-431X/12/12/247},
+	ISSN = {2073-431X},
+	ABSTRACT = {Static analysis is a software testing technique that analyzes the code without executing it. It is widely used to detect vulnerabilities, errors, and other issues during software development. Many tools are available for static analysis of Java code, including SpotBugs. Methods that perform a security check must be declared private or final; otherwise, they can be compromised when a malicious subclass overrides the methods and omits the checks. In Java, security checks can be performed using the SecurityManager class. This paper addresses the aforementioned problem by building a new automated checker that raises an issue when this rule is violated. The checker is built under the SpotBugs static analysis tool. We evaluated our approach on both custom test cases and real-world software, and the results revealed that the checker successfully detected related bugs in both with optimal metrics values.},
+	DOI = {10.3390/computers12120247}
+}
+
+@ARTICLE{detect_misused_crypto,
+  author={Braga, Alexandre and Dahab, Ricardo and Antunes, Nuno and Laranjeiro, Nuno and Vieira, Marco},
+  journal={IEEE Transactions on Reliability}, 
+  title={Understanding How to Use Static Analysis Tools for Detecting Cryptography Misuse in Software}, 
+  year={2019},
+  volume={68},
+  number={4},
+  pages={1384-1403},
+  keywords={Cryptography;Tools;Software;Encoding;Task analysis;Static analysis;Cryptography;cryptography misuse;software security;secure programming;static analysis tools},
+  doi={10.1109/TR.2019.2937214}
+}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%% END OF COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
