--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,7 +6,7 @@
 	\vspace*{0.25cm}
 	
 	\begin{spacing}{2}
-		{\Huge \textbf{Exploring Large Language Models Capabilities in Software Engineering}}
+		{\Huge \textbf{Exploring Large Language Models' Capabilities in Software Engineering}}
 	\end{spacing}
 	
 	\vspace*{2cm}
