Remove cite duplicate

--- a/refs.bib
+++ b/refs.bib
@@ -218,6 +218,16 @@
   doi={10.1109/TR.2019.2937214}
 }
 
+@INPROCEEDINGS{codex_as_fix,
+	author={Pearce, Hammond and Tan, Benjamin and Ahmad, Baleegh and Karri, Ramesh and Dolan-Gavitt, Brendan},
+	booktitle={2023 IEEE Symposium on Security and Privacy (SP)},
+	title={Examining Zero-Shot Vulnerability Repair with Large Language Models},
+	year={2023},
+	volume={},
+	number={},
+	pages={2339-2356},
+	doi={10.1109/SP46215.2023.10179324}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%% END OF COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
@@ -483,15 +493,7 @@
 	pages={2721-2725}
 }
 %done
-@INPROCEEDINGS{codex_as_fix,
-	author={Pearce, Hammond and Tan, Benjamin and Ahmad, Baleegh and Karri, Ramesh and Dolan-Gavitt, Brendan},
-	booktitle={2023 IEEE Symposium on Security and Privacy (SP)}, 
-	title={Examining Zero-Shot Vulnerability Repair with Large Language Models}, 
-	year={2023},
-	volume={},
-	number={},
-	pages={2339-2356},
-	doi={10.1109/SP46215.2023.10179324}}
+% Continue from here the duplicate check.
 %done
 @INPROCEEDINGS{sonar_plugin_sm,
 	author={Ferenc, Rudolf and Langó, László and Siket, István and Gyimóthy, Tibor and Bakota, Tibor},
@@ -695,17 +697,6 @@
 	publisher = {IEEE Computer Society},
 	address = {Los Alamitos, CA, USA},
 	month = {may}
-}
-
-@INPROCEEDINGS{generate_examples,
-	author={Pearce, Hammond and Tan, Benjamin and Ahmad, Baleegh and Karri, Ramesh and Dolan-Gavitt, Brendan},
-	booktitle={2023 IEEE Symposium on Security and Privacy (SP)},
-	title={Examining Zero-Shot Vulnerability Repair with Large Language Models},
-	year={2023},
-	volume={},
-	number={},
-	pages={2339-2356},
-	doi={10.1109/SP46215.2023.10179324}
 }
 
 @INPROCEEDINGS{real_examples_linting,
