Remove another duplicate

--- a/refs.bib
+++ b/refs.bib
@@ -229,6 +229,14 @@
 	doi={10.1109/SP46215.2023.10179324}
 }
 
+@inproceedings{shared_common_data,
+	author    = {Chunqiu Steven Xia and Yuxiang Wei and Lingming Zhang},
+	title     = {Automated program repair in the era of large pre-trained language models},
+	booktitle = {2023 IEEE/ACM 45th International Conference on Software Engineering (ICSE)},
+	pages     = {1482--1494},
+	year      = {2023}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%% END OF COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -493,7 +501,7 @@
 	pages={2721-2725}
 }
 %done
-% Continue from here the duplicate check.
+
 %done
 @INPROCEEDINGS{sonar_plugin_sm,
 	author={Ferenc, Rudolf and Langó, László and Siket, István and Gyimóthy, Tibor and Bakota, Tibor},
@@ -734,14 +742,7 @@
 	location = {Melbourne, Victoria, Australia},
 	series = {ICSE '23}
 }
-
-@inproceedings{apr_defects4j_too,
-	title={Automated program repair in the era of large pre-trained language models},
-	author={Xia, Chunqiu Steven and Wei, Yuxiang and Zhang, Lingming},
-	booktitle={Proceedings of the 45th International Conference on Software Engineering (ICSE 2023). Association for Computing Machinery},
-	year={2023}
-}
-
+%Continue from here
 @inproceedings{defects4j,
 	author={Just, Ren{\'e} and Jalali, Darioush and Ernst, Michael D},
 	year = {2014},
@@ -1117,14 +1118,6 @@
 	year    = {2024}
 }
 
-@inproceedings{apr_llm,
-	author    = {Chunqiu Steven Xia and Yuxiang Wei and Lingming Zhang},
-	title     = {Automated program repair in the era of large pre-trained language models},
-	booktitle = {2023 IEEE/ACM 45th International Conference on Software Engineering (ICSE)},
-	pages     = {1482--1494},
-	year      = {2023}
-}
-
 @article{generation_llm,
 	author  = {Tian Song and Hang Zhang and Yijia Xiao},
 	title   = {A high-quality generation approach for educational programming projects using llm},
@@ -1132,14 +1125,6 @@
 	volume  = {17},
 	pages   = {2242--2255},
 	year    = {2024}
-}
-
-@inproceedings{shared_common_data,
-	author    = {Chunqiu Steven Xia and Yuxiang Wei and Lingming Zhang},
-	title     = {Automated program repair in the era of large pre-trained language models},
-	booktitle = {2023 IEEE/ACM 45th International Conference on Software Engineering (ICSE)},
-	pages     = {1482--1494},
-	year      = {2023}
 }
 
 @article{common_shared_llm_output,
