Remove final duplicats

--- a/refs.bib
+++ b/refs.bib
@@ -251,7 +251,35 @@
 	doi = {10.1145/2610384.2628055}
 }
 
+@ARTICLE{many_bugs,
+	author={Le Goues, Claire and Holtschulte, Neal and Smith, Edward K. and Brun, Yuriy and Devanbu, Premkumar and Forrest, Stephanie and Weimer, Westley},
+	journal={IEEE Transactions on Software Engineering},
+	title={The ManyBugs and IntroClass Benchmarks for Automated Repair of C Programs},
+	year={2015},
+	volume={41},
+	number={12},
+	pages={1236-1256},
+	doi={10.1109/TSE.2015.2454513},
+	publisher = {IEEE}
+}
 
+@inproceedings{quix_bugs,
+	author = {Lin, Derrick and Koppel, James and Chen, Angela and Solar-Lezama, Armando},
+	title = {QuixBugs: A Multi-Lingual Program Repair Benchmark Set Based on the Quixey Challenge},
+	year = {2017},
+	isbn = {9781450355148},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3135932.3135941},
+	doi = {10.1145/3135932.3135941},
+	abstract = {Recent years have seen an explosion of work in automated program repair. While previous work has focused exclusively on tools for single languages, recent work in multi-language transformation has opened the door for multi-language program repair tools. Evaluating the performance of such a tool requires having a benchmark set of similar buggy programs in different languages. We present QuixBugs, consisting of 40 programs translated to both Python and Java, each with a bug on a single line. The QuixBugs benchmark suite is based on problems from the Quixey Challenge, where programmers were given a short buggy program and 1 minute to fix the bug.},
+	booktitle = {Proceedings Companion of the 2017 ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity},
+	pages = {55–56},
+	numpages = {2},
+	keywords = {benchmark, automated program repair},
+	location = {Vancouver, BC, Canada},
+	series = {SPLASH Companion 2017}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%% END OF COMMON REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%
@@ -758,37 +786,8 @@
 	location = {Melbourne, Victoria, Australia},
 	series = {ICSE '23}
 }
-%Continue from here
 
-
-@ARTICLE{many_bugs,
-	author={Le Goues, Claire and Holtschulte, Neal and Smith, Edward K. and Brun, Yuriy and Devanbu, Premkumar and Forrest, Stephanie and Weimer, Westley},
-	journal={IEEE Transactions on Software Engineering},
-	title={The ManyBugs and IntroClass Benchmarks for Automated Repair of C Programs},
-	year={2015},
-	volume={41},
-	number={12},
-	pages={1236-1256},
-	doi={10.1109/TSE.2015.2454513}
-}
-
-@inproceedings{quix_bugs,
-	author = {Lin, Derrick and Koppel, James and Chen, Angela and Solar-Lezama, Armando},
-	title = {QuixBugs: A Multi-Lingual Program Repair Benchmark Set Based on the Quixey Challenge},
-	year = {2017},
-	isbn = {9781450355148},
-	publisher = {Association for Computing Machinery},
-	address = {New York, NY, USA},
-	url = {https://doi.org/10.1145/3135932.3135941},
-	doi = {10.1145/3135932.3135941},
-	abstract = {Recent years have seen an explosion of work in automated program repair. While previous work has focused exclusively on tools for single languages, recent work in multi-language transformation has opened the door for multi-language program repair tools. Evaluating the performance of such a tool requires having a benchmark set of similar buggy programs in different languages. We present QuixBugs, consisting of 40 programs translated to both Python and Java, each with a bug on a single line. The QuixBugs benchmark suite is based on problems from the Quixey Challenge, where programmers were given a short buggy program and 1 minute to fix the bug.},
-	booktitle = {Proceedings Companion of the 2017 ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity},
-	pages = {55–56},
-	numpages = {2},
-	keywords = {benchmark, automated program repair},
-	location = {Vancouver, BC, Canada},
-	series = {SPLASH Companion 2017}
-}
+%COntinue from here
 
 @INPROCEEDINGS{bugs_js,
 	author={Gyimesi, P{e}'ter and Vancsics, B{e}'la and Stocco, Andrea and Mazinanian, Davood and Beszédes, {A}'rp{a}'d and Ferenc, Rudolf and Mesbah, Ali},
@@ -1141,27 +1140,6 @@
 	month   = {January},
 	year    = {2025},
 	note    = {Just Accepted}
-}
-
-@inproceedings{quixbugs,
-	author    = {Derrick Lin and James Koppel and Angela Chen and Armando Solar-Lezama},
-	title     = {QuixBugs: a multi-lingual program repair benchmark set based on the quixey challenge},
-	booktitle = {Proceedings Companion of the 2017 ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion 2017)},
-	pages     = {55--56},
-	address   = {Vancouver, BC, Canada},
-	publisher = {Association for Computing Machinery},
-	year      = {2017}
-}
-
-@article{manybugs_introclass,
-	author  = {Claire Le Goues and Neal Holtschulte and Edward K. Smith and Yuriy Brun and Premkumar Devanbu and Stephanie Forrest and Westley Weimer},
-	title   = {The ManyBugs and IntroClass benchmarks for automated repair of C programs},
-	journal = {IEEE Transactions on Software Engineering},
-	volume  = {41},
-	number  = {12},
-	pages   = {1236--1256},
-	year    = {2015},
-	publisher = {IEEE}
 }
 
 @misc{mbpp,
