Add data / dummy data to records to remove warnings

--- a/refs.bib
+++ b/refs.bib
@@ -292,7 +292,8 @@
 	title	= {LaMDA: Language Models for Dialog Applications},
 	author	= {Aaron Daniel Cohen and Adam Roberts and Alejandra Molina and Alena Butryna and Alicia Jin and Apoorv Kulshreshtha and Ben Hutchinson and Ben Zevenbergen and Blaise Hilary Aguera-Arcas and Chung-ching Chang and Claire Cui and Cosmo Du and Daniel De Freitas Adiwardana and Dehao Chen and Dmitry (Dima) Lepikhin and Ed H. Chi and Erin Hoffman-John and Heng-Tze Cheng and Hongrae Lee and Igor Krivokon and James Qin and Jamie Hall and Joe Fenton and Johnny Soraker and Kathy Meier-Hellstern and Kristen Olson and Lora Mois Aroyo and Maarten Paul Bosma and Marc Joseph Pickett and Marcelo Amorim Menegali and Marian Croak and Mark Díaz and Matthew Lamm and Maxim Krikun and Meredith Ringel Morris and Noam Shazeer and Quoc V. Le and Rachel Bernstein and Ravi Rajakumar and Ray Kurzweil and Romal Thoppilan and Steven Zheng and Taylor Bos and Toju Duke and Tulsee Doshi and Vincent Y. Zhao and Vinodkumar Prabhakaran and Will Rusch and YaGuang Li and Yanping Huang and Yanqi Zhou and Yuanzhong Xu and Zhifeng Chen},
 	year	= {2022},
-	booktitle	= {arXiv}
+	booktitle	= {arXiv},
+	publisher	= {arXiv}
 }
 %done
 @article{gpt3,
@@ -591,6 +592,7 @@
 }
 %done
 @misc{github_prompt_engineering,
+	author={Keiji Kanazawa},
 	title={How to get Codex to produce the code you want!},
 	howpublished ={\url{https://microsoft.github.io/prompt-engineering/}},
 	note={Accessed: 2024-04-02}
@@ -1006,7 +1008,8 @@
 	title={GPT is an effective tool for multilingual psychological text analysis},
 	author={Rathje, Steve and Mirea, Dan-Mircea and Sucholutsky, Ilia and Marjieh, Raja and Robertson, Claire and Van Bavel, Jay J},
 	year={2023},
-	publisher={PsyArXiv}
+	publisher={PsyArXiv},
+	journal={PsyArXiv}
 }
 
 @article{cheng2023artificial,
