Add features to coverpage so only one thing should be changed. Places that should not change should not be open to change

--- a/coverpage.tex
+++ b/coverpage.tex
@@ -11,6 +11,8 @@
 
 \pagestyle{empty}
 
+\newcommand{\authorname}{Chan Ge Me} % Change only this parameter t oyour name
+
 \begin{document}
 	
 \begin{center}
@@ -23,7 +25,7 @@
 	
 	\vfill
 	
-	{\LARGE Firstname Lastname} % change this
+	{\LARGE \authorname}
 	
 	\vspace*{6em}
 	
@@ -37,7 +39,7 @@
 	
 	{\Large Szeged}
 	
-	{\Large YEAR} % change this
+	{\Large \the\year}
 \end{center}
 	
 \end{document}
